version/0.52/_sources/examples/00-read_binary/load_shaft_result.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-read_binary/load_shaft_result.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-read_binary_load_shaft_result.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-read_binary_load_shaft_result.py:


.. _ref_load_shaft_result:

Shaft Modal Analysis
~~~~~~~~~~~~~~~~~~~~

Visualize a shaft modal analysis

.. GENERATED FROM PYTHON SOURCE LINES 10-17

.. code-block:: default

    # sphinx_gallery_thumbnail_number = 6

    from ansys.mapdl.reader import examples

    # Download an example shaft modal analysis result file
    shaft = examples.download_shaft_modal()








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Mesh is stored within the result object

.. GENERATED FROM PYTHON SOURCE LINES 19-21

.. code-block:: default

    print(shaft.mesh)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    ANSYS Mesh
      Number of Nodes:              27132
      Number of Elements:           25051
      Number of Element Types:      6
      Number of Node Components:    4
      Number of Element Components: 3





.. GENERATED FROM PYTHON SOURCE LINES 22-23

...and contains a VTK unstructured grid

.. GENERATED FROM PYTHON SOURCE LINES 23-25

.. code-block:: default

    print(shaft.mesh._grid)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    None




.. GENERATED FROM PYTHON SOURCE LINES 26-27

Plot the shaft

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: default

    cpos = shaft.plot()

    # list shaft node components



.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_001.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 31-33

.. code-block:: default

    print(shaft.element_components.keys())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    dict_keys(['EBC1', 'EBC2', 'SHAFT_MESH'])




.. GENERATED FROM PYTHON SOURCE LINES 34-37

Plot a node component

This camera angle was saved interactively from ``shaft.plot``

.. GENERATED FROM PYTHON SOURCE LINES 37-46

.. code-block:: default

    cpos = [
        (-115.35773008378118, 285.36602704380107, -393.9029392590675),
        (126.12852038381345, 0.2179228023931401, 5.236408799851887),
        (0.37246222812978824, 0.8468424028124546, 0.37964435122285495),
    ]
    shaft.plot(element_components=["SHAFT_MESH"], cpos=cpos)
    # get cpos from cpos = shaft.plot()





.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_002.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-48

Plot a node component as a wireframe

.. GENERATED FROM PYTHON SOURCE LINES 48-53

.. code-block:: default

    shaft.plot(
        element_components=["SHAFT_MESH"], cpos=cpos, style="wireframe", lighting=False
    )





.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_003.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 54-55

Plot the shaft with edges and with a blue color

.. GENERATED FROM PYTHON SOURCE LINES 55-57

.. code-block:: default

    shaft.plot(show_edges=True, color="cyan")




.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_004.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 58-59

Plot the shaft without lighting but with edges and with a blue color

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: default

    shaft.plot(lighting=False, show_edges=True, color="cyan")





.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_005.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 63-64

plot a mode shape without contours using the "bwr" color map

.. GENERATED FROM PYTHON SOURCE LINES 64-75

.. code-block:: default

    shaft.plot_nodal_solution(
        9,
        element_components=["SHAFT_MESH"],
        show_displacement=True,
        cmap="bwr",
        displacement_factor=0.3,
        stitle=None,
        overlay_wireframe=True,
        cpos=cpos,
    )




.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_006.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.10.12/x64/lib/python3.10/site-packages/pyvista/plotting/_plotting.py:282: PyVistaDeprecationWarning: 
    "stitle" is a deprecated keyword argument and will be removed in a future
    release.

    Use ``scalar_bar_args`` instead.  For example:

    scalar_bar_args={'title': 'Scalar Bar Title'}

      warnings.warn(USE_SCALAR_BAR_ARGS, PyVistaDeprecationWarning)




.. GENERATED FROM PYTHON SOURCE LINES 76-77

plot a mode shape with contours and the default colormap

.. GENERATED FROM PYTHON SOURCE LINES 77-88

.. code-block:: default

    shaft.plot_nodal_solution(
        1,
        element_components=["SHAFT_MESH"],
        n_colors=10,
        show_displacement=True,
        displacement_factor=1,
        stitle=None,
        overlay_wireframe=True,
        cpos=cpos,
    )




.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_007.png
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.10.12/x64/lib/python3.10/site-packages/pyvista/plotting/_plotting.py:282: PyVistaDeprecationWarning: 
    "stitle" is a deprecated keyword argument and will be removed in a future
    release.

    Use ``scalar_bar_args`` instead.  For example:

    scalar_bar_args={'title': 'Scalar Bar Title'}

      warnings.warn(USE_SCALAR_BAR_ARGS, PyVistaDeprecationWarning)




.. GENERATED FROM PYTHON SOURCE LINES 89-93

Animate a mode of a component the shaft

Set ``loop==True`` to plot continuously.
Disable ``movie_filename`` and increase ``n_frames`` for a smoother plot

.. GENERATED FROM PYTHON SOURCE LINES 93-104

.. code-block:: default

    shaft.animate_nodal_solution(
        5,
        element_components="SHAFT_MESH",
        comp="norm",
        displacement_factor=1,
        show_edges=True,
        cpos=cpos,
        loop=False,
        movie_filename="demo.gif",
        n_frames=30,
    )



.. image-sg:: /examples/00-read_binary/images/sphx_glr_load_shaft_result_008.gif
   :alt: load shaft result
   :srcset: /examples/00-read_binary/images/sphx_glr_load_shaft_result_008.gif
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    [(-115.35773008378118, 285.36602704380107, -393.9029392590675),
     (126.12852038381345, 0.2179228023931401, 5.236408799851887),
     (0.3724622281297882, 0.8468424028124544, 0.37964435122285484)]




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  15.141 seconds)


.. _sphx_glr_download_examples_00-read_binary_load_shaft_result.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: load_shaft_result.py <load_shaft_result.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: load_shaft_result.ipynb <load_shaft_result.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
